[package]
name = "ist8310"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "IST8310 magnetometer driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/ist8310"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "IST8310",
    "HMC5883",
    "HMC5983",
    "magnetometer"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

